[package]
name = "grubgeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
anyhow = "1.0"
rand = "0.8.5"
toml = "0.8.9"
serde = { version = "1.0", features = ["serde_derive"] }
indexmap = { version = "2.2.2", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
glam = "0.25"
